# wmsget

./: README.md  pyproject.toml  wms-downloader.ipynb
grid/: DKN_10km_euref89.avl  DKN_10km_euref89.dbf  DKN_10km_euref89.shp  DKN_10km_euref89.shx  DKN_1km_euref89.avl  DKN_1km_euref89.dbf  DKN_1km_euref89.shx
wmsget/: __init__.py  geom.py  wms.py
wmsget/grid/: __init__.py
