[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "wmsget"
authors = [
    {name = "Nicklas Simonsen", email = "nisi@dhigroup.com"},
]
description = "WMS to raster tool"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "numpy >= 1.11.0",
    "pandas",
    "pyproj",
    "geopandas",
    "rasterio",
    "pyogrio",
    "owslib",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/DHI/wmsget"
"Bug Tracker" = "https://github.com/DHI/wmsget/issues"
